--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
    <head>
       <title>Blog Pessoal</title>
-      </head> 
+    </head> 
+    <link rel="stylesheet" href="style.css">
    <body>
       <header>   
       <h1>Seu Blog Pessoal</h1>
