--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>Blog Pessoal</title>
     </head> 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
    <body>
       <header>   
       <h1>Seu Blog Pessoal</h1>
