--- a/index.html
+++ b/index.html
@@ -1,38 +1,15 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>Blog Pessoal</title>
-    </head> 
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <title>Minha Primeira Página Web</title>
     <link rel="stylesheet" href="index.css">
-   <body>
-      <header>   
-      <h1>Seu Blog Pessoal</h1>
-      <nav>
-         <a href=”dominio.tld/home”>Início</a>
-         <a href=”dominio.tld/blog”>Blog</a>
-         <a href=”dominio.tld/sobre”>Sobre</a>
-      </nav>
-      </header>
-      <main>
-         <div class=”row">
-            <div class="post-text-box">
-               <h1>Postagem Mais Recente</h1>
-               <section>
-                  <h1>Primeira Postagem</h1>
-                  <p>O conteúdo do primeiro post</p>
-               </section>
-            </div>
-            <div class=”profile”>
-               <h1>Sobre Mim</h1>
-               <img src=”foto-de-perfil.png”>
-               <p>Sobre o autor</p>
-            </div>  
-         </div>        
-      </main>
-      <footer>
-         <a href=”twitter.com/autor”>Twitter</a>
-         <a href=”facebook.com/autor”>Facebook</a>
-         <a href=”instagram.com/autor”>Instagram</a>
-      </footer>
-    </body>
+</head>
+<body>
+    <h1>Olá, Mundo!</h1>
+    <p id="mensagem">Esta é minha primeira página web.</p>
+    <button id="botao">Clique aqui</button>
+
+    <script src="index.js"></script>
+</body>
 </html>
